# mimobox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  findings.md  llms.txt  progress.md  task_plan.md  vm-assets
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/mimobox-cli/: Cargo.toml  README.md  build.rs
crates/mimobox-cli/src/: asset_download.rs  capture.rs  doctor.rs  logging.rs  main.rs
crates/mimobox-cli/src/commands/: bench.rs  cat.rs  code.rs  completions.rs  ls.rs  mcp_init.rs  mod.rs  run.rs  shell.rs  snapshot.rs  version.rs  write.rs
crates/mimobox-cli/tests/: cli_e2e.rs
crates/mimobox-core/: Cargo.toml  README.md
crates/mimobox-core/src/: lib.rs  sandbox.rs  seccomp.rs
crates/mimobox-core/tests/: core_contracts.rs
crates/mimobox-mcp/: Cargo.toml  README.md
crates/mimobox-mcp/src/: http.rs  lib.rs  main.rs
crates/mimobox-mcp/tests/: integration.rs
crates/mimobox-os/: Cargo.toml  README.md
crates/mimobox-os/benches/: pool_bench.rs
crates/mimobox-os/src/: lib.rs  linux.rs  macos.rs  pool.rs  pty.rs  seccomp.rs
crates/mimobox-os/tests/: fork_isolation.rs  landlock_bypass.rs  landlock_enforcement.rs  network_isolation.rs  sandbox_backend.rs  sandbox_pool.rs  seccomp_enforcement.rs  seccomp_rejection.rs
crates/mimobox-python/: Cargo.toml  README.md  pyproject.toml
crates/mimobox-python/python/mimobox/: __init__.py  __init__.pyi
crates/mimobox-python/src/: lib.rs
crates/mimobox-sdk/: Cargo.toml  README.md
crates/mimobox-sdk/benches/: bench_realworkload_os.rs  sdk_bench.rs
crates/mimobox-sdk/examples/: agent_demo.rs  agent_streaming.rs  basic_sandbox.rs  env_vars.rs  file_ops.rs  filesystem_isolation.rs  fork_demo.rs  http_proxy.rs  llm_agent.rs  network_policy.rs  sandbox_pool.rs  streaming.rs  timeout_and_memory.rs
crates/mimobox-sdk/src/: config.rs  dispatch.rs  error.rs  lib.rs  router.rs  sandbox.rs  types.rs  vm_helpers.rs
crates/mimobox-sdk/src/sandbox/: execute.rs  files.rs  http.rs  mod.rs  pty.rs  registry.rs  snapshot.rs
crates/mimobox-sdk/tests/: sdk_snapshot.rs  sdk_vm_pool.rs
crates/mimobox-vm/: Cargo.toml  README.md
crates/mimobox-vm/benches/: kvm_bench.rs
crates/mimobox-vm/guest/: guest-init.c
crates/mimobox-vm/src/: guest_file_ops.rs  host_seccomp.rs  http_proxy.rs  kvm.rs  lib.rs  pool.rs  restore_pool.rs  snapshot.rs  vm.rs  vm_assets.rs
crates/mimobox-vm/src/kvm/: boot.rs  profile.rs  state.rs
crates/mimobox-vm/src/kvm/devices/: mod.rs  serial.rs  vsock.rs  vsock_channel.rs
crates/mimobox-vm/tests/: guest_symlink_security.rs  kvm_e2e.rs  microvm_api.rs  pool.rs  restore_pool.rs
crates/mimobox-wasm/: Cargo.toml  README.md
crates/mimobox-wasm/benches/: bench_realworkload_wasm.rs  wasm_bench.rs
crates/mimobox-wasm/src/: lib.rs
crates/mimobox-wasm/tests/: wasm_backend.rs
discuss/: competitive-analysis.md  http-acl-design.md  http-proxy-design.md  macos-sandbox-research.md  product-strategy-review.md  streaming-output-design.md  vm-communication-analysis.md
discuss/audit/: audit_v1.md
docs/: api.md  architecture.md  faq.md  getting-started.md  mcp-config.md  mcp-integration.md  mcp-server.md  performance.md  python-sdk.md
docs/research/: 00-executive-summary.md  01-smolvm-analysis.md  02-gvisor-analysis.md  03-firecracker-analysis.md  04-wasm-sandbox-analysis.md  05-os-level-sandbox-analysis.md  06-academic-frontier-analysis.md  07-other-approaches-analysis.md  08-feasibility-review.md  09-code-review.md  10-code-review-round2.md  11-wasmtime-api-research.md  12-wit-interface-design.md  13-wasm-code-review.md  14-microvm-design.md  15-vsock-feasibility.md  16-microvm-boot-optimization-survey.md  16-multi-runtime-architecture.md  17-microvm-cold-boot-deep-dive.md  18-microsandbox-network-policy-review.md  19-macos-memory-limit-research.md  20-competitive-sdk-benchmark.md
examples/: README.md  agent_demo.rs  agent_streaming.rs  basic.rs  file_ops.rs  http_proxy.rs  python_basic.py  streaming.rs
examples/langchain/: README.md  demo.py  mimobox_tool.py  requirements.txt
examples/openai_agent/: README.md  demo.py  sandbox_tool.py
examples/python/: basic.py  config_options.py  context_manager.py  env_vars.py  error_handling.py  file_ops.py  fork_isolation.py  http_acl.py  http_request.py  multi_language.py  pty_session.py  snapshot_restore.py  streaming.py
examples/wasm-tools/echo-tool/: Cargo.toml
examples/wasm-tools/echo-tool/src/: lib.rs
scripts/: bench-ci.sh  bench-realworkload-os.sh  bench-realworkload-wasm.sh  bench.sh  build-kernel.sh  build-rootfs.sh  build.sh  check.sh  docker-entrypoint.sh  extract-vmlinux.py  extract-vmlinux.sh  install.sh  publish-crates.sh  quickstart-demo.sh  release-smoke.sh  release.sh  setup.sh  test-e2e.sh  test.sh
tests/: cli_e2e.rs
wit/: mimobox.wit
