[package]
name = "mimobox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "mimobox 命令行入口"
readme = "README.md"
keywords = ["sandbox", "cli", "agent", "security"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[dependencies]
mimobox-core.workspace = true
mimobox-os.workspace = true
mimobox-sdk.workspace = true
mimobox-wasm = { workspace = true, optional = true }
clap.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
wasm = ["dep:mimobox-wasm"]
kvm = ["dep:mimobox-vm", "mimobox-vm/kvm", "mimobox-sdk/vm"]

[target.'cfg(target_os = "linux")'.dependencies]
mimobox-vm = { workspace = true, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
