[package]
name = "mimobox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mimobox 核心 trait 和类型定义"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
