[package]
name = "mimobox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for mimobox sandbox"
readme = "README.md"
keywords = ["sandbox", "agent", "security", "isolation"]
categories = ["development-tools", "api-bindings"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
