[package]
name = "mimobox-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.5", features = ["server", "schemars", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mimobox-sdk = { path = "../mimobox-sdk" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["os"]
os = ["mimobox-sdk/os"]
vm = ["mimobox-sdk/vm"]

[lints]
workspace = true
