[package]
name = "mimobox-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "MCP Server for mimobox Agent Sandbox integration"
readme = "README.md"
keywords = ["sandbox", "mcp", "agent", "security", "llm"]
categories = ["development-tools", "api-bindings"]

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
rmcp.workspace = true
tokio.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mimobox-sdk.workspace = true
tower.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["os"]
os = ["mimobox-sdk/os"]
vm = ["mimobox-sdk/vm"]
full = ["os", "vm"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
anyhow = "1"
mimobox-core.workspace = true
