[package]
name = "mimobox-os"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "OS-level sandbox backend (Landlock + Seccomp + Namespaces)"
readme = "README.md"
keywords = ["sandbox", "os", "security", "landlock", "seccomp"]
categories = ["development-tools"]

[dependencies]
mimobox-core.workspace = true
thiserror.workspace = true
libc.workspace = true
tracing.workspace = true
portable-pty.workspace = true

# Linux 专属依赖
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
landlock = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "pool_bench"
harness = false
path = "benches/pool_bench.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]
