[package]
name = "mimobox-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mimobox Python SDK 绑定（PyO3）"

[lib]
name = "mimobox"
crate-type = ["cdylib", "rlib"]

[dependencies]
mimobox-sdk = { path = "../mimobox-sdk", default-features = false, features = ["os", "vm"] }
pyo3 = { version = "0.24", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.24"

[lints]
workspace = true
