[package]
name = "mimobox-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MimoBox Python SDK for AI agent sandbox execution"
readme = "README.md"
keywords = ["sandbox", "python", "pyo3", "agent"]
categories = ["development-tools", "api-bindings"]
publish = false

[lib]
name = "mimobox"
crate-type = ["cdylib", "rlib"]

[dependencies]
mimobox-sdk = { workspace = true, features = ["os", "vm"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3"] }
shlex = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.24"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
