[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mimobox"
version = "0.1.0"
description = "mimobox 的 Python SDK 绑定"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[tool.maturin]
bindings = "pyo3"
module-name = "mimobox"
