[package]
name = "mimobox-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "MimoBox unified SDK with smart routing for AI agent workloads"
readme = "README.md"
keywords = ["sandbox", "sdk", "agent", "security", "isolation"]
categories = ["development-tools", "api-bindings"]

[dependencies]
mimobox-core.workspace = true
mimobox-os = { workspace = true, optional = true }
mimobox-vm = { workspace = true, optional = true, features = ["kvm"] }
mimobox-wasm = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
shlex.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json.workspace = true
tempfile = "3"

[features]
default = ["os"]
os = ["dep:mimobox-os"]
vm = ["dep:mimobox-vm"]
wasm = ["dep:mimobox-wasm"]
full = ["os", "vm", "wasm"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "agent_demo"
path = "examples/agent_demo.rs"

[[example]]
name = "agent_streaming"
path = "examples/agent_streaming.rs"

[[example]]
name = "http_proxy"
path = "examples/http_proxy.rs"

[[example]]
name = "env_vars"
path = "examples/env_vars.rs"

[[example]]
name = "file_ops"
path = "examples/file_ops.rs"

[[example]]
name = "llm_agent"
path = "examples/llm_agent.rs"

[[example]]
name = "basic_sandbox"
path = "examples/basic_sandbox.rs"

[[example]]
name = "timeout_and_memory"
path = "examples/timeout_and_memory.rs"

[[example]]
name = "filesystem_isolation"
path = "examples/filesystem_isolation.rs"

[[example]]
name = "network_policy"
path = "examples/network_policy.rs"

[[example]]
name = "sandbox_pool"
path = "examples/sandbox_pool.rs"

[[example]]
name = "fork_demo"
path = "examples/fork_demo.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "sdk_bench"
harness = false

[[bench]]
name = "bench_realworkload_os"
harness = false
