[package]
name = "mimobox-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mimobox microVM 沙箱后端"

[dependencies]
libc.workspace = true
mimobox-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings.workspace = true
kvm-ioctls.workspace = true
vm-memory = { workspace = true, features = ["backend-mmap"] }
vmm-sys-util.workspace = true

[features]
default = []
kvm = []
boot-profile = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "kvm_bench"
harness = false
path = "benches/kvm_bench.rs"

[lints]
workspace = true
