[package]
name = "mimobox-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "microVM sandbox backend using KVM/Hypervisor.framework"
readme = "README.md"
keywords = ["sandbox", "microvm", "kvm", "security", "snapshot"]
categories = ["development-tools"]

[dependencies]
libc.workspace = true
mimobox-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings.workspace = true
kvm-ioctls.workspace = true
virtio-queue = { version = "0.16", optional = true }
vhost = { version = "0.13", features = ["vhost-kern", "vhost-vsock"], optional = true }
vm-memory = { workspace = true, features = ["backend-mmap"] }
vmm-sys-util.workspace = true

[features]
default = []
kvm = ["virtio-queue", "vhost"]
zerocopy-fork = []
boot-profile = []
guest-vsock = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "kvm_bench"
harness = false
path = "benches/kvm_bench.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
