[package]
name = "mimobox-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "mimobox Wasm 沙箱后端（基于 Wasmtime）"

[dependencies]
mimobox-core.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
sha2.workspace = true
anyhow.workspace = true
libc.workspace = true

[features]
default = []
wasm = []

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
wat = "1"

[[bench]]
name = "wasm_bench"
harness = false

[lints]
workspace = true
