[package]
name = "mimobox-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "MimoBox WebAssembly sandbox backend using Wasmtime"
readme = "README.md"
keywords = ["sandbox", "wasm", "security", "isolation"]
categories = ["development-tools", "wasm"]

[dependencies]
mimobox-core.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
sha2.workspace = true
anyhow.workspace = true
libc.workspace = true
tracing.workspace = true

[features]
default = []
wasm = []

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
wat = "1"

[[bench]]
name = "wasm_bench"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
